--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
 
     <!-- Strings related to login -->
     <string name="prompt_user">Padron</string>
-    <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
+    <string name="prompt_password">Contraseña</string>
+    <string name="action_sign_in">Ingresar</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_user">This user is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
@@ -13,11 +13,15 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
-    <string name="title_activity_oferta_academica">OfertaAcademicaActivity</string>
+    <string name="title_activity_subjects">Oferta Academica</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="search">Search</string>
+    <string name="name">Name</string>
+    <string name="code">Code</string>
+    <string name="department">Department</string>
 </resources>
