#24 Begun creating the list #21 Initial creation of the request failing #24 Begun creating the layout for a course #20 Begun creating the Adapter #19 Begun creating the Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,7 @@
     <string name="name">Name</string>
     <string name="code">Code</string>
     <string name="department">Department</string>
+    <string name="total_slots">Total Slots</string>
+    <string name="professors">Professors</string>
+    <string name="title_activity_courses">Catedras</string>
 </resources>
