--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="ending">Ending</string>
     <string name="day_of_week">Day of Week</string>
     <string name="description">Description</string>
+    <string name="button_sign_up">Inscribite</string>
 </resources>
