--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="code">Code</string>
     <string name="department">Department</string>
     <string name="total_slots">Total Slots</string>
+    <string name="status">Estado</string>
     <string name="professors">Professors</string>
     <string name="title_activity_courses">Catedras</string>
     <string name="number">Number</string>
@@ -34,10 +35,14 @@
     <string name="ending">Ending</string>
     <string name="day_of_week">Day of Week</string>
     <string name="description">Description</string>
-    <string name="button_sign_up">Inscribite</string>
+    <string name="button_sign_up">Inscribirse</string>
+    <string name="button_drop_out">Desinscribirse</string>
     <string name="classroom_code_header">Aula</string>
     <string name="description_header">Tipo</string>
     <string name="day_of_week_header">Dia</string>
     <string name="beginning_header">Desde</string>
     <string name="ending_header">Hasta</string>
+    <string name="title_activity_my_courses">Mis Inscripciones</string>
+    <string name="already_one_of_your_subjects">Ya te inscribiste en esta materia</string>
+    <string name="course_content_title">Oferta Académica</string>
 </resources>
