--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Mataco</string>
 
     <!-- Strings related to login -->
-    <string name="prompt_user">Padron</string>
+    <string name="prompt_user">Padrón</string>
     <string name="prompt_password">Contraseña</string>
     <string name="action_sign_in">Ingresar</string>
     <string name="action_sign_in_short">Sign in</string>
