--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
     <string name="title_activity_my_courses">Mis Inscripciones</string>
     <string name="already_one_of_your_subjects">Ya te inscribiste en esta materia</string>
     <string name="course_content_title">Oferta Académica</string>
+    <string name="title_activity_exam_subjects">Exámenes</string>
 </resources>
