--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,10 +6,11 @@
     <string name="prompt_password">Contraseña</string>
     <string name="action_sign_in">Ingresar</string>
     <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_user">This user is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
+    <string name="error_invalid_user">El padrón ingresado tiene una cantidad de dígitos incorrecta</string>
+    <string name="error_invalid_password">La contraseña es muy corta</string>
+    <string name="error_incorrect_password">Contraseña inválida</string>
+    <string name="error_username_required">Recuerde ingresar el padrón</string>
+    <string name="error_password_required">Recuerde ingresar la contraseña</string>
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
