--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,4 +74,5 @@
     <string name="title_activity_student_record">Historial Académico</string>
     <string name="title_activity_subjects_select_career">Oferta Académica</string>
     <string name="title_activity_exam_subjects_select_career">Exámenes</string>
+    <string name="icon">Icon</string>
 </resources>
