--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,4 +75,5 @@
     <string name="title_activity_subjects_select_career">Oferta Académica</string>
     <string name="title_activity_exam_subjects_select_career">Exámenes</string>
     <string name="icon">Icon</string>
+    <string name="select_career">Seleccionar Carrera</string>
 </resources>
