#76 Refactory of code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,4 +76,5 @@
     <string name="title_activity_exam_subjects_select_career">Exámenes</string>
     <string name="icon">Icon</string>
     <string name="select_career">Seleccionar Carrera</string>
+    <string name="career">Ingeniería en Informática</string>
 </resources>
