--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,8 @@
     <string name="nav_my_exams">Mis Inscripciones a Exámenes</string>
     <string name="exams_channel">Notificaciones de exámenes</string>
     <string name="exams_channel_desc">Notificaciones relacionadas con exámenes</string>
+    <string name="courses_channel">Notificaciones de exámenes</string>
+    <string name="courses_channel_desc">Notificaciones relacionadas con exámenes</string>
     <string name="exam_title">01/01/01 Juan Esteban Perez</string>
     <string name="nav_log_out">Cerrar Sesión</string>
     <string name="nav_student_record">Historial Académico</string>
@@ -77,4 +79,6 @@
     <string name="icon">Icon</string>
     <string name="select_career">Seleccionar Carrera</string>
     <string name="career">Ingeniería en Informática</string>
+    <string name="condition">Regular</string>
+    <string name="no_available_subjects">No hay materias disponibles</string>
 </resources>
