--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,7 +47,7 @@
     <string name="title_activity_my_courses">Mis Inscripciones</string>
     <string name="already_one_of_your_subjects">Ya te inscribiste en esta materia</string>
     <string name="course_content_title">Oferta Académica</string>
-    <string name="title_activity_exam_subjects">Exámenes</string>
+    <string name="title_activity_exam_subjects">Oferta Exámenes</string>
     <string name="title_activity_exams">Exámenes</string>
     <string name="instance">Instancia</string>
     <string name="date">16/04/18</string>
