#? Added certificate and survey

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,9 +80,45 @@
     <string name="select_career">Seleccionar Carrera</string>
     <string name="career">Ingeniería en Informática</string>
     <string name="condition">Regular</string>
-    <string name="no_available_subjects">No hay materias disponibles</string>
+    <string name="no_available_subjects">No hay encuestas disponibles</string>
     <string name="cant_sing_up_courses">No es el período para inscribirse a cursos</string>
     <string name="cant_drop_out_courses">No es el período para desinscribirse a cursos</string>
     <string name="cant_sing_up_exams">No es el período para inscribirse a exámenes</string>
     <string name="cant_drop_out_exams">No es el período para desinscribirse a exámenes</string>
+    <string name="nav_surveys">Encuestas</string>
+    <string name="title_activity_survey_subjects">Encuestas</string>
+    <string name="general_opinion">Opinion General Sobre el Curso</string>
+    <string name="comentaries">Comentarios</string>
+    <string name="_1">1</string>
+    <string name="_2">2</string>
+    <string name="_3">3</string>
+    <string name="_4">4</string>
+    <string name="_5">5</string>
+    <string name="_6">6</string>
+    <string name="_7">7</string>
+    <string name="_8">8</string>
+    <string name="_9">9</string>
+    <string name="_10">10</string>
+    <string name="theorical_class_level">Nivel de las Clases Teóricas</string>
+    <string name="practical_class_level">Nivel de las Clases Prácticas del Curso</string>
+    <string name="course_dificulty">Dificultad del Curso</string>
+    <string name="tp_dificulty">Dificultad del TP</string>
+    <string name="interesting_toppics">¿Los Temas de la Materia son Interesantes?</string>
+    <string name="updated_toppics">¿Los Temas Están Actualizados?</string>
+    <string name="aproved_course">¿Aprobó la Cursada?</string>
+    <string name="yes">Si</string>
+    <string name="no">No</string>
+    <string name="action_send_survey">Enviar</string>
+    <string name="title_activity_survey">Encuesta</string>
+    <string name="prompt_comentaries">Escribe un comentario aquí</string>
+    <string name="error_radio">Debes contestar este item</string>
+    <string name="survey_title">Encuesta de Curso</string>
+    <string name="semester">Cuatrimesre 2 de 2018</string>
+    <string name="error_authority_required">Debes ingresar el nombre de la autoridad</string>
+    <string name="title_activity_certificate">Certificado de Alumno Regular</string>
+    <string name="nav_certificate">Certificado Alumno Regular</string>
+    <string name="prompt_authority">Escriba aquí el nombre de la autoridad</string>
+    <string name="authority_title">Recipiente del certificado:</string>
+    <string name="certificate_title">Generar Certificad de Alumno Regular</string>
+    <string name="action_generate_certificate">Generar Certificado</string>
 </resources>
