#109 Added everything related to the password management. Improved looks of the surveys

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,7 +87,7 @@
     <string name="cant_drop_out_exams">No es el período para desinscribirse a exámenes</string>
     <string name="nav_surveys">Encuestas</string>
     <string name="title_activity_survey_subjects">Encuestas</string>
-    <string name="general_opinion">Opinion General Sobre el Curso</string>
+    <string name="general_opinion">Opinión general sobre el curso</string>
     <string name="comentaries">Comentarios</string>
     <string name="_1">1</string>
     <string name="_2">2</string>
@@ -99,13 +99,13 @@
     <string name="_8">8</string>
     <string name="_9">9</string>
     <string name="_10">10</string>
-    <string name="theorical_class_level">Nivel de las Clases Teóricas</string>
-    <string name="practical_class_level">Nivel de las Clases Prácticas del Curso</string>
-    <string name="course_dificulty">Dificultad del Curso</string>
+    <string name="theorical_class_level">Nivel de las clases teóricas del curso</string>
+    <string name="practical_class_level">Nivel de las clases prácticas del curso</string>
+    <string name="course_dificulty">Dificultad del curso</string>
     <string name="tp_dificulty">Dificultad del TP</string>
-    <string name="interesting_toppics">¿Los Temas de la Materia son Interesantes?</string>
-    <string name="updated_toppics">¿Los Temas Están Actualizados?</string>
-    <string name="aproved_course">¿Aprobó la Cursada?</string>
+    <string name="interesting_toppics">¿Cómo te resultaron los temas de la materia?</string>
+    <string name="updated_toppics">¿Los temas de la materia están actualizados?</string>
+    <string name="aproved_course">¿Aprobó la cursada?</string>
     <string name="yes">Si</string>
     <string name="no">No</string>
     <string name="action_send_survey">Enviar</string>
@@ -118,7 +118,21 @@
     <string name="title_activity_certificate">Certificado de Alumno Regular</string>
     <string name="nav_certificate">Certificado Alumno Regular</string>
     <string name="prompt_authority">Escriba aquí el nombre de la autoridad</string>
-    <string name="authority_title">Recipiente del certificado:</string>
+    <string name="authority_title">Autoridad receptora del certificado:</string>
     <string name="certificate_title">Generar Certificad de Alumno Regular</string>
     <string name="action_generate_certificate">Generar Certificado</string>
+    <string name="action_edit_password">Modificar</string>
+    <string name="action_cancel">Cancelar</string>
+    <string name="prompt_old_password">Contraseña actual</string>
+    <string name="prompt_new_password">Nueva contraseña</string>
+    <string name="prompt_repeat_password">Repetir contraseña</string>
+    <string name="change_password">Cambiar contraseña:</string>
+    <string name="error_new_password_required">Recuerde ingresar la nueva contraseña</string>
+    <string name="error_repeat_password_required">Recuerde repetir la nueva contraseña</string>
+    <string name="error_password_not_match">La contraseña ingresada no es la correcta</string>
+    <string name="error_new_password_not_match">Las contraseñas no coinciden</string>
+    <string name="nav_configuration">Configuración</string>
+    <string name="title_activity_configuration">Configuración</string>
+    <string name="error_new_password_same">La contraseña no debe ser la misma que la contraseña original</string>
+    <string name="forgot_password">Si olvidaste tu contraseña, contactate con la administración</string>
 </resources>
